  - GWEN_Time_toString
  - GWEN_Time_toUtcString
  ------------------------------------------------------------------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------
- armed CSV plugins import function
- fixed a bug in CSV-importer: now title lines are skipped if "title=0" in
  parameters


2004/11/11: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a build-problem (tools did not link against all needed libraries)


2004/11/02: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- src/os/directory_all.c: Improved path handling for WIN32


===========================================================================
MARK: released gwenhywfar-1.2.1 (2004/10/02)
===========================================================================


2004/09/30: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- db: GWEN_GetIntValue: When converting a char value to int we now use
  "%i" instead of "%d". This will allow the code to read hex values as well


===========================================================================
MARK: released gwenhywfar-1.2 (2004/09/26)
===========================================================================


2004-09-25  Christian Stimming  <stimming@tuhh.de>

	* src/parser/text.c, src/os/posix/libloader.c: When changing the
	locale, immediately copy the previous locale to a new
	buffer. Otherwise often enough the returned string which was
	static storage was no longer valid.


2004/09/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- db: ReadFromStream now uses a GWEN_BUFFER instead of a fixed char buffer.
  This removes unnecessary limits (and allows libchipcard to work)


2004-09-24   Christian Stimming <stimming@tuhh.de>
