@@ -10,6 +10,7 @@
 - armed CSV plugins import function
 - fixed a bug in CSV-importer: now title lines are skipped if "title=0" in
   parameters
+- added defines for printf-templates for GWEN_TYPEs
 
 
 2004/11/11: Martin Preuss<martin@libchipcard.de>
